--- a/.github/workflows/nextjs.yml
+++ b/.github/workflows/nextjs.yml
@@ -77,11 +77,16 @@ jobs:
         run: ${{ steps.detect-package-manager.outputs.runner }} next build
        # - name: Static HTML export with Next.js
         #  run: ${{ steps.detect-package-manager.outputs.runner }} next export
-      - name: Upload artifact
-        uses: actions/upload-pages-artifact@v3
+      #- name: Upload artifact
+       # uses: actions/upload-pages-artifact@v3
+        #with:
+        #  path: ./out
+      - name: Upload production-ready build files
+        uses: actions/upload-artifact@v2
         with:
-          #path: ./out
+          name: production-files
           path: ./dist
+
 
   # Deployment job
   deploy:
