--- a/.github/workflows/nextjs.yml
+++ b/.github/workflows/nextjs.yml
@@ -89,15 +89,16 @@ jobs:
 
 
  
-    deploy:
-    name: Deploy
-    needs: build
+    # Deployment job
+  deploy:
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
     runs-on: ubuntu-latest
-    if: github.ref == 'refs/heads/main'
-
+    needs: build
     steps:
       - name: Download artifact
-        uses: actions/download-artifact@v3
+        uses: actions/download-artifact@v4
         with:
           name: production-files
           path: ./dist
