--- a/.github/workflows/nextjs.yml
+++ b/.github/workflows/nextjs.yml
@@ -77,15 +77,15 @@ jobs:
         run: ${{ steps.detect-package-manager.outputs.runner }} next build
        # - name: Static HTML export with Next.js
         #  run: ${{ steps.detect-package-manager.outputs.runner }} next export
-      #- name: Upload artifact
-       # uses: actions/upload-pages-artifact@v3
-        #with:
-        #  path: ./out
-      - name: Upload production-ready build files
-        uses: actions/upload-artifact@v4
+      - name: Upload artifact
+        uses: actions/upload-pages-artifact@v3
         with:
-          name: production-files
-          path: ./dist
+         path: ./out
+     # - name: Upload production-ready build files
+      #  uses: actions/upload-artifact@v4
+       # with:
+       #   name: production-files
+        #  path: ./dist
 
 
  
@@ -97,14 +97,6 @@ jobs:
     runs-on: ubuntu-latest
     needs: build
     steps:
-      - name: Download artifact
-        uses: actions/download-artifact@v3
-        with:
-          name: production-files
-          path: ./dist
-
-      - name: Deploy to GitHub Pages
-        uses: peaceiris/actions-gh-pages@v3
-        with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: ./dist
+      - name: Publish to GitHub Pages 
+        id: deployment
+        uses: actions/deploy-pages@v4
