--- a/.github/workflows/nextjs.yml
+++ b/.github/workflows/nextjs.yml
@@ -83,10 +83,10 @@ jobs:
         with:
          path: ./out
      # - name: Upload production-ready build files
-      #  uses: actions/upload-artifact@v4
+      #  uses: actions/upload-artifact@v3
        # with:
        #   name: production-files
-        #  path: ./dist
+        #  path: ./out
 
 
  
