--- a/.github/workflows/nextjs.yml
+++ b/.github/workflows/nextjs.yml
@@ -92,21 +92,14 @@ jobs:
  
     # Deployment job
   deploy:
-    environment:
+   environment:
       name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
-    runs-on: ubuntu-latest
-    needs: build
-    
-    steps:
-      - name: Download artifact
-        uses: actions/download-artifact@v3
-        with:
-          name: production-files
-          path: ./out
 
-      - name: Deploy to GitHub Pages
-        uses: peaceiris/actions-gh-pages@v3
-        with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: ./out
+   runs-on: ubuntu-latest
+   needs: build
+
+    steps:
+      - name: Publish to GitHub Pages 
+        id: deployment
+        uses: actions/deploy-pages@v4
