--- a/.github/workflows/nextjs.yml
+++ b/.github/workflows/nextjs.yml
@@ -78,6 +78,10 @@ jobs:
         run: npx next build 
        # - name: Static HTML export with Next.js
         #  run: ${{ steps.detect-package-manager.outputs.runner }} next export
+      - name: Setup Pages ⚙
+        uses: actions/configure-pages@v4
+        with:
+          static_site_generator: next
       - name: Upload artifact
         uses: actions/upload-artifact@v3
         with:
