--- a/.github/workflows/nextjs.yml
+++ b/.github/workflows/nextjs.yml
@@ -85,12 +85,12 @@ jobs:
       - name: Upload artifact
         uses: actions/upload-artifact@v3
         with:
-         path: ./out
+         path: ./next
      # - name: Upload production-ready build files
       #  uses: actions/upload-artifact@v3
        # with:
        #   name: production-files
-        #  path: ./out
+        #  path: ./next
 
 
  
