--- a/.github/workflows/nextjs.yml
+++ b/.github/workflows/nextjs.yml
@@ -18,6 +18,17 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: 20
+      - name: Cache dependencies 
+        id: cache_dependencies
+        uses: actions/cache@v3
+        with:
+          path: node_modules
+          key: node-modules-${{ hashFiles('package-lock.json') }}
+
+      - name: Install dependencies 🔧
+        shell: bash
+        if: steps.cache_dependencies.outputs.cache-hit != 'true'
+        run: npm ci
 
       - name: Setup Pages 
         uses: actions/configure-pages@v4
